---------------------------------------------------------------------------
Version 5.3.4  [DEVEL] (rgerhards), 2009-10-??
---------------------------------------------------------------------------
Version 5.3.3  [DEVEL] (rgerhards), 2009-10-27
- simplified and thus speeded up the queue engine, also fixed some
  potential race conditions (in very unusual shutdown conditions)
  along the way. The threading model has seriously changes, so there may
  be some regressions.
- enhanced test environment (inlcuding testbench): support for enhancing
  probability of memory addressing failure by using non-NULL default
  value for malloced memory (optional, only if requested by configure
  option). This helps to track down some otherwise undetected issues
  within the testbench.
- bugfix: potential abort if inputname property was not set 
  primarily a problem of imdiag
- bugfix: message processing states were not set correctly in all cases
  however, this had no negative effect, as the message processing state
  was not evaluated when a batch was deleted, and that was the only case
  where the state could be wrong.
---------------------------------------------------------------------------
Version 5.3.2  [DEVEL] (rgerhards), 2009-10-21
- enhanced omfile to support transactional interface. This will increase
  performance in many cases.
- added multi-ruleset support to imudp
- re-enabled input thread termination handling that does avoid thread
  cancellation where possible. This provides a more reliable mode of
  rsyslogd termination (canceling threads my result in not properly
  freed resouces and potential later hangs, even though we perform
  proper cancel handling in our code). This is part of an effort to
  reduce thread cancellation as much as possible in rsyslog.
  NOTE: the code previously written code for this functionality had a
  subtle race condition. The new code solves that.
- enhanced immark to support non-cancel input module termination