@@ -73,7 +73,7 @@ Binds the listener to a specific <a href="multi_ruleset.html">ruleset</a>.</li>
 <li>can not be loaded together with <a href="imgssapi.html">imgssapi</a>
 (which includes the functionality of imtcp)</li>
 </ul>
-<p><b>Sample:</b></p>
+<p><b>Example:</b></p>
 <p>This sets up a TCP server on port 514 and permits it to accept up to 500 connections:<br>
 </p>
 <textarea rows="15" cols="60">$ModLoad imtcp # needs to be done just once
