@@ -25,6 +25,7 @@
 #ifndef INCLUDED_RULESET_H
 #define INCLUDED_RULESET_H
 
+#include "queue.h"
 #include "linkedlist.h"
 
 /* the ruleset object */
@@ -32,6 +33,7 @@ struct ruleset_s {
 	BEGINobjInstance;	/* Data to implement generic object - MUST be the first data element! */
 	linkedList_t llRules;	/* this is NOT a pointer - no typo here ;) */
 	uchar *pszName;		/* name of our ruleset */
+	qqueue_t *pQueue;	/* "main" message queue, if the ruleset has its own (else NULL) */
 };
 
 /* interfaces */
@@ -50,8 +52,9 @@ BEGINinterface(ruleset) /* name must also be changed in ENDinterface macro! */
 	rsRetVal (*SetDefaultRuleset)(uchar*);
 	rsRetVal (*SetCurrRuleset)(uchar*);
 	ruleset_t* (*GetCurrent)(void);
+	qqueue_t* (*GetRulesetQueue)(ruleset_t*);
 ENDinterface(ruleset)
-#define rulesetCURR_IF_VERSION 1 /* increment whenever you change the interface structure! */
+#define rulesetCURR_IF_VERSION 2 /* increment whenever you change the interface structure! */
 
 
 /* prototypes */
